--- a/debian/libnvidia-glcore.symbols.in
+++ b/debian/libnvidia-glcore.symbols.in
@@ -1,33 +1,85 @@
 libnvidia-glcore.so.#VERSION# #PACKAGE# #MINVER#
- (regex)"^_nv\d*glcore@Base$" 0
+ _nv000glcore@Base 0
+ _nv001glcore@Base 0
+ _nv002glcore@Base 0
+ _nv003glcore@Base 0
+ _nv004glcore@Base 0
+ _nv005glcore@Base 0
+ _nv006glcore@Base 0
+ _nv008glcore@Base 0
+ _nv009glcore@Base 0
+ _nv011glcore@Base 0
+ _nv012glcore@Base 0
+ _nv013glcore@Base 0
+ _nv014glcore@Base 0
+ _nv015glcore@Base 0
+ _nv016glcore@Base 0
+ _nv017glcore@Base 0
+ _nv018glcore@Base 0
+ _nv019glcore@Base 0
+ _nv021glcore@Base 0
+ _nv022glcore@Base 0
+ _nv023glcore@Base 0
+ _nv024glcore@Base 0
+ _nv025glcore@Base 0
+ _nv026glcore@Base 0
+ _nv027glcore@Base 0
+ _nv028glcore@Base 0
+ _nv034glcore@Base 0
+ _nv041glcore@Base 0
  vk_optimusGetDeviceProcAddr@Base 435
  vk_optimusGetInstanceProcAddr@Base 435
 libnvidia-ngx.so.1 #PACKAGE# #MINVER#
- NVSDK_NGX_CUDA_AllocateParameters@Base 515
- NVSDK_NGX_CUDA_CreateFeature@Base 515
- NVSDK_NGX_CUDA_DestroyParameters@Base 515
- NVSDK_NGX_CUDA_EvaluateFeature@Base 515
- NVSDK_NGX_CUDA_GetCapabilityParameters@Base 515
- NVSDK_NGX_CUDA_GetParameters@Base 515
- NVSDK_NGX_CUDA_GetScratchBufferSize@Base 515
- NVSDK_NGX_CUDA_Init@Base 515
- NVSDK_NGX_CUDA_Init_Ext@Base 515
- NVSDK_NGX_CUDA_ReleaseFeature@Base 515
- NVSDK_NGX_CUDA_Shutdown@Base 515
- NVSDK_NGX_VULKAN_AllocateParameters@Base 515
- NVSDK_NGX_VULKAN_CreateFeature1@Base 515
- NVSDK_NGX_VULKAN_CreateFeature@Base 515
- NVSDK_NGX_VULKAN_DestroyParameters@Base 515
- NVSDK_NGX_VULKAN_EvaluateFeature@Base 515
- NVSDK_NGX_VULKAN_GetCapabilityParameters@Base 515
- NVSDK_NGX_VULKAN_GetParameters@Base 515
- NVSDK_NGX_VULKAN_GetScratchBufferSize@Base 515
- NVSDK_NGX_VULKAN_Init@Base 515
- NVSDK_NGX_VULKAN_Init_Ext@Base 515
- NVSDK_NGX_VULKAN_Init_ProjectID@Base 515
- NVSDK_NGX_VULKAN_ReleaseFeature@Base 515
- NVSDK_NGX_VULKAN_RequiredExtensions@Base 515
- NVSDK_NGX_VULKAN_Shutdown1@Base 515
- NVSDK_NGX_VULKAN_Shutdown@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_AllocateParameters@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_CreateFeature@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_DestroyParameters@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_EvaluateFeature@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_GetCapabilityParameters@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_GetParameters@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_GetScratchBufferSize@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_Init@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_Init_Ext@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_ReleaseFeature@Base 515
+ (arch=amd64)NVSDK_NGX_CUDA_Shutdown@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_AllocateParameters@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_CreateFeature1@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_CreateFeature@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_DestroyParameters@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_EvaluateFeature@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_GetCapabilityParameters@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_GetParameters@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_GetScratchBufferSize@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_Init@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_Init_Ext@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_Init_ProjectID@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_ReleaseFeature@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_RequiredExtensions@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_Shutdown1@Base 515
+ (arch=amd64)NVSDK_NGX_VULKAN_Shutdown@Base 515
 libnvidia-tls.so.#VERSION# #PACKAGE# #MINVER#
- (regex)"^_nv\d*tls@Base$" 0
+ _nv000tls@Base 0
+ _nv001tls@Base 0
+ _nv002tls@Base 0
+ _nv005tls@Base 0
+ _nv006tls@Base 0
+ _nv007tls@Base 0
+ _nv008tls@Base 0
+ _nv012tls@Base 0
+ _nv013tls@Base 0
+ _nv014tls@Base 0
+ _nv015tls@Base 0
+ _nv016tls@Base 0
+ _nv017tls@Base 0
+ _nv018tls@Base 0
+ _nv019tls@Base 0
+ _nv020tls@Base 0
+ _nv021tls@Base 0
+ _nv022tls@Base 0
+ _nv023tls@Base 0
+ _nv024tls@Base 0
+ _nv025tls@Base 0
+ _nv026tls@Base 0
+ _nv027tls@Base 0
+ _nv028tls@Base 0
+ _nv029tls@Base 0
+ _nv030tls@Base 0
