--- a/debian/control.in
+++ b/debian/control.in
@@ -36,7 +36,7 @@ Depends:
  xserver-xorg-video-${nvidia} (= ${binary:Version}) [${nvidia:arch:has-driver}],
  ${nvidia}-vdpau-driver (= ${binary:Version}) [${nvidia:arch:has-driver}],
  ${nvidia}-alternative (= ${binary:Version}) [${nvidia:arch:has-driver}],
- ${nvidia:kmod:binary},
+ ${nvidia:kmod:binary} | ${nvidia}-kernel-dkms-open (= ${binary:Version}) [${nvidia:arch:has-driver}],
  nvidia-support [${nvidia:arch:has-driver}],
  ${misc:Depends}
 Recommends:
@@ -130,6 +130,8 @@ Recommends:
  | ${libcuda1} (>= ${nvidia:Version}),
 Provides:
  ${nvidia}-kernel-${nvidia:Version},
+Conflicts:
+ ${nvidia}-kernel-open-dkms-${nvidia:Version},
 Description: NVIDIA binary kernel module DKMS source${nvidia:VariantDesc}
  This package builds the NVIDIA Xorg binary kernel module needed by
  ${nvidia}-driver, using DKMS.
