--- a/debian/nvidia-alternative.postinst.in
+++ b/debian/nvidia-alternative.postinst.in
@@ -56,6 +56,8 @@ if [ "$1" = "triggered" ]; then
 		$(add_multiarch_slave /usr/lib "" libGLESv2_nvidia.so.2 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libcuda.so.1 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libcuda.so /usr/lib #PRIVATE#/)
+		$(add_multiarch_slave /usr/lib "" libcudadebugger.so.1 /usr/lib #PRIVATE#/)
+		$(add_multiarch_slave /usr/lib "" libcudadebugger.so /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libnvcuvid.so.1 /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libnvcuvid.so /usr/lib #PRIVATE#/)
 		$(add_multiarch_slave /usr/lib "" libnvidia-allocator.so.1 /usr/lib #PRIVATE#/)
