--- a/debian/nvidia-driver-bin.install.in
+++ b/debian/nvidia-driver-bin.install.in
@@ -4,4 +4,4 @@ nvidia-ngx-updater					usr/lib/#PRIVATE#/
 nvidia-application-profiles-#VERSION#-rc		usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
 
-firmware/gsp.bin    lib/firmware/nvidia/#VERSION#
+firmware/gsp*.bin    lib/firmware/nvidia/#VERSION#
