--- a/debian/rules
+++ b/debian/rules
@@ -337,7 +337,7 @@ override_dh_bugfiles:
 	dh_bugfiles -A
 
 override_dh_shlibdeps:
-	dh_shlibdeps -l/$(libdir)/$(nvidia_private)
+	dh_shlibdeps -l/$(libdir)/$(nvidia_private) -Xpkcs
 
 override_dh_gencontrol:
 	dh_gencontrol -- \
